--- a/members.html
+++ b/members.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "Members"
-description: "Collaborators working on this project."
+description: "Research team working on this project."
 header-img: "img/covoice_bg.png"
 ---
 <hr>
