--- a/members.html
+++ b/members.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: "Members"
+title: "Team"
 description: "Research team working on this project."
 header-img: "img/covoice_bg.png"
 ---
