--- a/objectives.html
+++ b/objectives.html
@@ -4,7 +4,7 @@ title: "Objectives"
 description: "The COVOICE-19 goals"
 header-img: "img/covoice_bg.png"
 ---
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <div class="box">
     <div class="container">
      	<div class="row">
