--- a/objectives.html
+++ b/objectives.html
@@ -4,82 +4,11 @@ title: "Objectives"
 description: "The COVOICE-19 goals"
 header-img: "img/covoice_bg.png"
 ---
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<div class="box">
-   <div class="container">
-      <div class="row">
-         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-            <div class="box-part text-center">
-               <i class="fa fa-instagram fa-3x" aria-hidden="true"></i>
-               <div class="title">
-                  <h4>Instagram</h4>
-               </div>
-               <div class="text">
-                  <span>Lorem ipsum dolor sit amet, id quo eruditi eloquentiam. Assum decore te sed. Elitr scripta ocurreret qui ad.</span>
-               </div>
-               <a href="#">Learn More</a>
-            </div>
-         </div>
-         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-            <div class="box-part text-center">
-               <i class="fa fa-twitter fa-3x" aria-hidden="true"></i>
-               <div class="title">
-                  <h4>Twitter</h4>
-               </div>
-               <div class="text">
-                  <span>Lorem ipsum dolor sit amet, id quo eruditi eloquentiam. Assum decore te sed. Elitr scripta ocurreret qui ad.</span>
-               </div>
-               <a href="#">Learn More</a>
-            </div>
-         </div>
-         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-            <div class="box-part text-center">
-               <i class="fa fa-facebook fa-3x" aria-hidden="true"></i>
-               <div class="title">
-                  <h4>Facebook</h4>
-               </div>
-               <div class="text">
-                  <span>Lorem ipsum dolor sit amet, id quo eruditi eloquentiam. Assum decore te sed. Elitr scripta ocurreret qui ad.</span>
-               </div>
-               <a href="#">Learn More</a>
-            </div>
-         </div>
-         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-            <div class="box-part text-center">
-               <i class="fa fa-pinterest-p fa-3x" aria-hidden="true"></i>
-               <div class="title">
-                  <h4>Pinterest</h4>
-               </div>
-               <div class="text">
-                  <span>Lorem ipsum dolor sit amet, id quo eruditi eloquentiam. Assum decore te sed. Elitr scripta ocurreret qui ad.</span>
-               </div>
-               <a href="#">Learn More</a>
-            </div>
-         </div>
-         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-            <div class="box-part text-center">
-               <i class="fa fa-google-plus fa-3x" aria-hidden="true"></i>
-               <div class="title">
-                  <h4>Google</h4>
-               </div>
-               <div class="text">
-                  <span>Lorem ipsum dolor sit amet, id quo eruditi eloquentiam. Assum decore te sed. Elitr scripta ocurreret qui ad.</span>
-               </div>
-               <a href="#">Learn More</a>
-            </div>
-         </div>
-         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-            <div class="box-part text-center">
-               <i class="fa fa-github fa-3x" aria-hidden="true"></i>
-               <div class="title">
-                  <h4>Github</h4>
-               </div>
-               <div class="text">
-                  <span>Lorem ipsum dolor sit amet, id quo eruditi eloquentiam. Assum decore te sed. Elitr scripta ocurreret qui ad.</span>
-               </div>
-               <a href="#">Learn More</a>
-            </div>
-         </div>
-      </div>
-   </div>
+<div class="card" style="width: 18rem;">
+  <img src="..." class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
 </div>
