--- a/objectives.html
+++ b/objectives.html
@@ -7,9 +7,10 @@ header-img: "img/covoice_bg.png"
 <div class="row">
   <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img data-src="holder.js/300x300" alt="...">
+      <!--<img data-src="holder.js/300x300" alt="...">-->
+      <i class="fa fa-instagram fa-3x" aria-hidden="true"></i>
       <div class="caption">
-        <h3>Thumbnail label</h3>
+        <h2>Thumbnail label</h3>
         <p>...</p>
         <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
       </div>
