--- a/objectives.html
+++ b/objectives.html
@@ -10,7 +10,7 @@ header-img: "img/covoice_bg.png"
       <!--<img data-src="holder.js/300x300" alt="...">-->      
       <div class="caption">
         <i class="fa fa-instagram fa-3x" aria-hidden="true"></i>
-        <b>COVOICE-19 Dataset</b>
+        <h4>COVOICE-19 Dataset</h4>
         <p>TBD</p>        
       </div>
     </div>
