--- a/objectives.html
+++ b/objectives.html
@@ -7,7 +7,7 @@ header-img: "img/covoice_bg.png"
 <div class="row">
   <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img data-src="https://static.thenounproject.com/png/2985133-200.png" alt="...">      
+      <img src="https://static.thenounproject.com/png/2985133-200.png" alt="...">      
       <div class="caption">
         <!--<i class="fa fa-instagram fa-3x" aria-hidden="true"></i>-->
         <h4>COVOICE-19 Dataset</h4>
